<resources>
    <string name="app_name">Carcassonne</string>
    <string name="new_game">New Game</string>
    <string name="find_game">Find Game</string>
    <string name="how_to_play">How To Play</string>
    <string name="content_description_background">Background</string>
    <string name="content_description_carcassonne_title">Carcassonne Title</string>
    <string name="content_description_start_game_button">Start Game</string>
    <string name="choose_username_welcome_text">Welcome To Carcassonne</string>
    <string name="username">Username</string>
    <string name="welcome_homescreen">Welcome\n%s</string>
    <string name="lobby_players_waiting">Players waiting ...</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="create">Create</string>
    <string name="lobby_list">List of Lobbies</string>
    <string name="title_activity_lobby_lists">LobbyListsActivity</string>
    <string name="show_all_lobbies">Lobbies</string>
    <string name="play">Play</string>
    <string name="start_playing">Start Playing</string>
    <string name="back">Back</string>
    <string name="door_icon">Door Icon</string>
    <string name="leave_lobby">Leave</string>
    <string name="playGame">Play</string>
    <string name="goToGameboard">Start</string>
    <string name="tile">Tile\n</string>
    <string name="nextturn">NextTurn</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">UP</string>
    <string name="down">Down</string>
    <string name="PlusSign">+</string>
    <string name="MinusSign">-</string>
    <string name="choose_meeple_placement">Choose Meeple Placement</string>
    <string name="confirm">Confirm</string>
    <string name="skip">Skip</string>
    <string name="meeple_with_color_of_your_player">Meeple with color of your player</string>
    <string name="r">R</string>
    <string name="meepleCount">%d x</string>
    <string name="rules">Rules</string>
    <string name="scoreboard">Winners</string>
    <string name="second_place">Second Place</string>
    <string name="first_place">First Place</string>
    <string name="third_place">Third Place</string>
    <string name="main_menu">Main Menu</string>
    <string name="points">%d</string>
    <string name="cheat">Cheat</string>
    <string name="points_text">Points</string>
    <string name="accuse">Accuse</string>

</resources>